2007-05-10  Chris Toshok  <toshok@hungry.com>

	* compzilla/src/compzillaWindowEvents.cpp (GetBorderWidth): return
	the border width, not the width.

	* compzilla/chrome/skin/compzilla.css: visibility -> display here
	too.

	* compzilla/chrome/content/debug.js: oops, toggleDebugWindow ->
	debugToggleWindow.

	* compzilla/chrome/content/frame.js: switch to using display
	instead of visibility to show/hide windows.  saves us having to
	set visibility on both the content and frame.  also, clean up the
	frame recreation in the WINDOW_TYPE code.

	* compzilla/chrome/content/windowStack.js: make replaceWindow a
	no-op if w1 == w2.

2007-05-10  Chris Toshok  <toshok@hungry.com>

	* compzilla/chrome/content/frame.js: add a new function,
	addCachedEventListener (this should really be a method added to
	nativewin) which does the idempotent "if registered, unregister
	then register" thing.  This is so we can just call CompzillaFrame
	or CompzillaDockFrame multiple times on the same content element
	(which we need to be able to do to support WINDOW_TYPE property
	changes) and have it not keep adding event handlers.  Make use of
	this method in _connectNativeWindowListeners.

	Also, port the wm.js propertychange support for
	_NET_WM_WINDOW_TYPE over.  This makes panels come up with the the
	window manager frame (nautilus desktop windows too).

	Also, only resize the titlebox if there is one.  fixes js errors
	on resizing dock frames.
	
	* compzilla/chrome/skin/compzilla.css: make the debug window a
	little prettier (smaller font), and fix up the titlebar font a bit
	as well.  also, track class changes in start2.xul.

	* compzilla/chrome/content/start2.xul: add some class's for things
	which make sense (the dock frame, since in both windowFrame and
	dockFrame we expect the user to change the id), and to the
	windowTitle.

	* compzilla/chrome/content/windowStack.js (stackWindow): use w.id
	instead of w.getTitle() since it might not be set by the time the